Added hints to run JVM in Docker and resource management